--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -1,3 +1,33 @@
+/* Weekly Overview */
+.weekly-overview-container {
+    border: solid 1px blue;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.btn-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.add-btn {
+    width: 30px;
+}
+.days {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+}
+
+/* Daily Detail */
+.daily-detail-container {
+    width: 80%;
+    border: solid 1px red;
+}
+
 .daily-overview-container {
-    border: solid 1px black;
+    border: solid 1px green;
+    min-height: 250px;
 }
