--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -2,6 +2,7 @@
 .weekly-overview-container {
     border: solid 1px blue;
     width: 20%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +20,8 @@
     display: flex;
     flex-direction: column-reverse;
     width: 100%;
+    height: 100%;
+    overflow-y: auto;
 }
 .daily-overview-container {
     border: solid 1px green;
