--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,20 @@
     padding: 0;
 }
 #root {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 .App {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 100%;
 }
 /* Content */
 #weekly-calender-container {
     display: flex;
     flex-direction: row;
-    width: 95%;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
