--- a/src/index.css
+++ b/src/index.css
@@ -18,15 +18,12 @@
 }
 /* Content */
 #weekly-calender-container {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    grid-template-rows: 10% 90%;
-    grid-template-areas:
-        "nav nav"
-        "daysummary daydetail";
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: 100%;
     max-width: 1700px;
     max-height: 800px;
     overflow: hidden;
+    position: relative;
 }
