--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,18 @@
 }
 .App {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
+}
+.title-bar {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: solid 1px black;
 }
 /* Content */
 #weekly-calender-container {
