--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,18 @@
 #root {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 .App {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 75%;
 }
 .title-bar {
     width: 100%;
@@ -29,8 +33,5 @@
     flex-direction: row;
     width: 100%;
     height: 100%;
-    max-width: 1700px;
-    max-height: 800px;
-    overflow: hidden;
     position: relative;
 }
