--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -1,17 +1,15 @@
 /* Weekly Overview */
 .weekly-overview-container {
-    border: solid 1px blue;
     width: 30%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 10% 90%;
 }
 .btn-group {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 10%;
 }
 .add-btn {
     width: 30px;
@@ -21,16 +19,25 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: thin;
+    border-bottom-left-radius: 10px;
 }
 .daily-overview-container {
-    border: solid 1px green;
     min-height: 250px;
     display: flex;
     flex-direction: row;
     width: 100%;
+    background-color: white;
+    -webkit-box-shadow: 2px 0 5px -2px grey;
+    box-shadow: 2px 0 5px -2px grey;
+}
+.daily-overview-container.active {
+    background-color: rgba(228, 228, 238, 0.609);
+}
+.daily-overview-container:hover {
+    box-shadow: inset 0px 2px 5px -2px #888, inset 0px -2px 5px -2px #888;
 }
 .container-child {
     display: flex;
@@ -44,7 +51,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    background-color: rgb(213, 214, 231);
     visibility: hidden;
     transition: width 0.1s ease-in-out;
 }
@@ -54,6 +61,7 @@
 }
 .daily-day-date-container {
     width: 30%;
+    min-width: fit-content;
 }
 .daily-task-container {
     width: 70%;
@@ -71,11 +79,21 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
+.today-marker {
+    color: white;
+    padding: 0.3rem;
+    background-color: rgb(70, 134, 255);
+    border-radius: 5px;
+}
 
 /* Daily Detail */
 .daily-detail-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     width: 100%;
-    border: solid 1px red;
+    box-shadow: 0 1px 5px -2px gray;
+    border-bottom-right-radius: 10px;
 }
 .chosen-date {
     display: flex;
@@ -85,8 +103,20 @@
     width: 100%;
 }
 .filtered-tasks {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     width: 100%;
     height: 100%;
+    padding: 0 1rem 1rem 1rem;
+    align-items: center;
+    overflow-y: scroll;
+    border-bottom-right-radius: 10px;
+}
+.task-container {
+    width: 100%;
+    border: 3px dashed black;
+    padding: 1rem;
 }
 
 /* Task Modal */
