--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -111,6 +111,7 @@
     padding: 0 1rem 1rem 1rem;
     align-items: center;
     overflow-y: scroll;
+    scrollbar-width: thin;
     border-bottom-right-radius: 10px;
 }
 .task-container {
