--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -23,6 +23,7 @@
     overflow-x: hidden;
     scrollbar-width: thin;
     border-bottom-left-radius: 10px;
+    direction: rtl;
 }
 .daily-overview-container {
     min-height: 250px;
@@ -32,6 +33,7 @@
     background-color: white;
     -webkit-box-shadow: 2px 0 5px -2px grey;
     box-shadow: 2px 0 5px -2px grey;
+    direction: ltr;
 }
 .daily-overview-container.active {
     background-color: rgba(228, 228, 238, 0.609);
@@ -91,7 +93,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
+    width: 70%;
     box-shadow: 0 1px 5px -2px gray;
     border-bottom-right-radius: 10px;
 }
