--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -1,6 +1,6 @@
 /* Weekly Overview */
 .weekly-overview-container {
-    width: 30%;
+    width: 25%;
     height: 100%;
     display: grid;
     grid-template-rows: 10% 90%;
@@ -93,7 +93,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 70%;
+    width: 75%;
     box-shadow: 0 1px 5px -2px gray;
     border-bottom-right-radius: 10px;
 }
@@ -126,8 +126,9 @@
 .additional-task-modal {
     position: absolute;
     border: black solid 1px;
-    left: 25%;
-    top: 42%;
+    background-color: white;
+    left: 33%;
+    top: 30%;
 }
 .add-task-form {
     display: flex;
