--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -118,8 +118,37 @@
 }
 .task-container {
     width: 100%;
-    border: 3px dashed black;
+    border: 3px dashed rgb(117, 135, 212);
+    background-color: rgba(117, 135, 212, 0.2);
+    border-radius: 10px;
+}
+.task-container:hover {
+    background-color: rgba(117, 135, 212, 0.3);
+}
+
+/* Days Tasks */
+.sorted-task {
     padding: 1rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.task-time {
+    width: 100%;
+    justify-self: center;
+    align-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.task-btn {
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 0.5rem;
 }
 
 /* Task Modal */
@@ -127,12 +156,33 @@
     position: absolute;
     border: black solid 1px;
     background-color: white;
-    left: 33%;
-    top: 30%;
+    height: 400px;
+    width: 500px;
+    left: 30%;
+    top: 20%;
+    border-radius: 10px;
+    background: rgb(5, 29, 61);
+    background: linear-gradient(
+        180deg,
+        rgba(5, 29, 61, 1) 0%,
+        rgba(20, 32, 41, 1) 75%
+    );
+    color: white;
+    box-shadow: -20px 20px 75px grey;
 }
 .add-task-form {
+    display: grid;
+    grid-template-rows: 80% 20%;
+    width: 100%;
+    height: 100%;
+    padding: 0.2rem;
+}
+.input-container {
+    padding: 2rem;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    gap: 1rem;
 }
 .title-description-container {
     display: flex;
@@ -141,6 +191,11 @@
 .type-input-container {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
+}
+.type-input-container label {
+    display: flex;
+    gap: 0.5rem;
 }
 .title-input {
     display: flex;
@@ -149,4 +204,30 @@
 .description-input {
     display: flex;
     flex-direction: column;
+}
+.close-btn {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    display: flex;
+    color: red;
+    font-size: 2rem;
+    background: unset;
+    border: unset;
+    cursor: pointer;
+}
+.submit-btn-container {
+    border-top: rgb(73, 73, 73) 1px solid;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.submit-btn {
+    border: unset;
+    background: unset;
+    color: white;
+    cursor: pointer;
+    width: 10rem;
+    padding: 1rem;
 }
