--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Raleway", sans-serif;
 }
 #root {
     width: 100vw;
@@ -31,6 +32,12 @@
     box-shadow: 0 1px 5px -2px gray;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    background: rgb(228, 228, 238);
+    background: linear-gradient(
+        90deg,
+        rgba(228, 228, 238, 0.6) 0%,
+        rgba(200, 200, 235, 0.7) 95%
+    );
 }
 /* Content */
 #weekly-calender-container {
