--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -46,6 +46,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: white;
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: thin;
@@ -158,6 +159,7 @@
 
 /* Daily Detail */
 .daily-detail-container {
+    z-index: 100;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -195,9 +197,16 @@
     border: 3px solid rgb(117, 135, 212);
     background-color: rgba(117, 135, 212, 0.2);
     border-radius: 10px;
+    /* display: flex;
+    flex-direction: column; */
+    position: relative;
 }
-.task-container:hover {
-    background-color: rgba(117, 135, 212, 0.3);
+.break {
+    position: absolute;
+    left: 1rem;
+    background-color: rgb(195, 191, 255);
+    height: 1px;
+    width: 95%;
 }
 
 /* Days Tasks */
@@ -221,12 +230,27 @@
     justify-self: center;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: end;
     gap: 0.5rem;
 }
-
+.task-edit-btn {
+    cursor: pointer;
+    border: unset;
+    background: rgb(188, 195, 231);
+    padding: 0.6rem;
+    border-radius: 10px;
+    font-size: 1.8rem;
+}
+.task-edit-svg {
+    display: flex;
+}
+.task-cancel-svg {
+    display: flex;
+    color: red;
+}
 /* Task Modal */
 .additional-task-modal {
+    z-index: 200;
     position: absolute;
     border: black solid 1px;
     background-color: white;
@@ -291,8 +315,8 @@
     cursor: pointer;
 }
 .submit-btn-container {
-    border-top: rgb(73, 73, 73) 1px solid;
-    width: 100%;
+    justify-self: center;
+    width: 95%;
     display: flex;
     align-items: center;
     justify-content: center;
