--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
     display: grid;
     grid-template-rows: 10% 90%;
     width: 75%;
+    min-width: 1000px;
     height: 75%;
     max-height: 950px;
     max-width: 1550px;
@@ -25,6 +26,7 @@
     background-color: white;
 }
 .title-bar {
+    z-index: 200;
     width: 100%;
     display: flex;
     align-items: center;
@@ -35,7 +37,7 @@
     background: rgb(228, 228, 238);
     background: linear-gradient(
         90deg,
-        rgba(228, 228, 238, 0.6) 0%,
+        rgba(217, 217, 246, 0.6) 0%,
         rgba(200, 200, 235, 0.7) 95%
     );
 }
