added text labels to interactive elements

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,15 @@
         rgba(117, 135, 212, 0.8) 100%
     );
 }
+.visually-hidden:not(:focus):not(:active) {
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
 /* Content */
 #weekly-calender-container {
     display: flex;
