added window size hook and edited css

--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -257,10 +257,12 @@
     position: absolute;
     border: black solid 1px;
     background-color: white;
-    height: 410px;
+    height: 440px;
     width: 500px;
     left: 30%;
-    top: 20%;
+    top: 15%;
+    bottom: 15%;
+    right: 70%;
     border-radius: 10px;
     background: rgb(5, 29, 61);
     background: linear-gradient(
@@ -297,6 +299,7 @@
 }
 .type-input-container label {
     display: flex;
+    align-items: center;
     gap: 0.5rem;
     font-size: 1.2rem;
     font-weight: 600;
@@ -312,6 +315,7 @@
     font-size: 1.2rem;
     border-radius: 5px;
     border: rgb(62, 56, 144) solid 1px;
+    padding: 0.3rem;
 }
 .title-input-label,
 .description-input-label {
@@ -340,7 +344,7 @@
 .close-btn {
     position: absolute;
     top: 3px;
-    left: 3px;
+    right: 3px;
     display: flex;
     color: red;
     font-size: 2rem;
@@ -359,7 +363,8 @@
     border: unset;
     background: unset;
     cursor: pointer;
-    width: 10rem;
+    width: 100%;
+    height: 100%;
     padding: 1rem;
     font-size: 1.4rem;
     font-weight: 500;
