Updated colour palette changing date from red

--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -124,7 +124,7 @@
 .daily-date {
     font-size: 2rem;
     font-weight: 800;
-    color: red;
+    color: rgb(62, 56, 144);
 }
 .daily-month {
     font-size: 1.2rem;
