--- a/src/Components/WeeklyCalender/WeeklyCalender.css
+++ b/src/Components/WeeklyCalender/WeeklyCalender.css
@@ -32,7 +32,7 @@
 }
 .prev-svg,
 .next-svg {
-    display: flex;
+    display: block;
     font-size: 3em;
 }
 #prev-week:disabled,
@@ -99,7 +99,7 @@
     cursor: pointer;
 }
 .add-task-svg {
-    display: flex;
+    display: block;
 }
 .toggle-active {
     width: 15%;
@@ -249,7 +249,7 @@
 }
 .task-edit-svg,
 .task-cancel-svg {
-    display: flex;
+    display: block;
 }
 /* Task Modal */
 .additional-task-modal {
@@ -297,7 +297,7 @@
     gap: 1rem;
     align-items: center;
 }
-.type-input-container label {
+.type-input-container.label {
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -369,6 +369,36 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
+.mobile-add-task-btn-container {
+    display: flex;
+    align-items: flex-start;
+    padding: 0.5rem;
+}
+.mobile-add-task-btn {
+    z-index: 300;
+    border: unset;
+    background-color: rgb(188, 195, 231);
+    padding: 0.6rem;
+    border-radius: 10px;
+    font-size: 1.8rem;
+    color: rgb(62, 56, 144);
+    cursor: pointer;
+}
+
+.return-btn {
+    position: absolute;
+    left: 1rem;
+    cursor: pointer;
+    background: rgb(188, 195, 231);
+    padding: 0.6rem;
+    border-radius: 10px;
+    border: unset;
+    font-size: 1.8rem;
+    color: rgb(62, 56, 144);
+}
+.return-btn-svg {
+    display: block;
+}
 
 /* Mobile */
 @media screen and (max-width: 430px) and (orientation: portrait) {
@@ -393,39 +423,10 @@
         width: 100%;
         position: relative;
     }
-    .return-btn {
-        position: absolute;
-        left: 1rem;
-        cursor: pointer;
-        background: rgb(188, 195, 231);
-        padding: 0.6rem;
-        border-radius: 10px;
-        border: unset;
-        font-size: 1.8rem;
-        color: rgb(62, 56, 144);
-    }
-    .return-btn-svg {
-        display: flex;
-    }
     .daily-overview-day {
         width: 100%;
         display: flex;
         flex-direction: row;
-    }
-    .mobile-add-task-btn-container {
-        display: flex;
-        align-items: flex-start;
-        padding: 0.5rem;
-    }
-    .mobile-add-task-btn {
-        z-index: 300;
-        border: unset;
-        background-color: rgb(188, 195, 231);
-        padding: 0.6rem;
-        border-radius: 10px;
-        font-size: 1.8rem;
-        color: rgb(62, 56, 144);
-        cursor: pointer;
     }
     .additional-task-modal {
         left: 0;
@@ -436,5 +437,109 @@
         height: unset;
         margin-right: auto;
         margin-left: auto;
+    }
+    .add-task-form {
+        padding: 1rem 0;
+    }
+    .input-container {
+        padding: 0;
+        gap: unset;
+        justify-content: space-evenly;
+    }
+    .type-input-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        font-size: 1rem;
+        font-weight: 600;
+        width: 100%;
+        padding: 0.5rem;
+    }
+    .title-description-container {
+        gap: 0.5rem;
+        width: 100%;
+    }
+    .title-input-label,
+    .description-input-label {
+        padding: 0.5rem;
+        font-size: 1rem;
+    }
+    .date-input,
+    .time-input-from,
+    .time-input-to {
+        font-size: 1rem;
+    }
+}
+@media screen and (max-width: 930px) and (orientation: landscape) {
+    .weekly-overview-container {
+        min-width: 240px;
+        grid-template-rows: 15% 85%;
+    }
+    .daily-detail-container {
+        position: relative;
+        display: grid;
+        grid-template-rows: 15% 85%;
+    }
+    .daily-day-date-container {
+        padding: 0.5rem;
+    }
+    .daily-day {
+        font-size: 2rem;
+    }
+    .daily-overview-day {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+    .mobile-add-task-btn-container {
+        display: flex;
+        align-items: flex-start;
+        padding: unset;
+        padding-top: 0.5rem;
+        padding-right: 0.5rem;
+    }
+    .chosen-date {
+        padding: 0.5rem;
+    }
+    .additional-task-modal {
+        z-index: 300;
+        left: 0;
+        top: 0.5rem;
+        right: 0;
+        bottom: unset;
+        width: 95%;
+        height: 95%;
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 500px;
+    }
+    .add-task-form {
+        padding: 0.5rem;
+    }
+    .input-container {
+        padding: 0.5rem;
+        gap: 0.5rem;
+        justify-content: space-evenly;
+    }
+    .type-input-container {
+        flex-direction: row;
+        justify-content: space-evenly;
+        font-size: 1rem;
+        font-weight: 600;
+        flex-wrap: wrap;
+    }
+    .title-description-container {
+        gap: 0.5rem;
+    }
+    .title-input-label,
+    .description-input-label {
+        padding: unset;
+        font-size: 1rem;
+    }
+    .date-input,
+    .time-input-from,
+    .time-input-to {
+        font-size: 1rem;
+        margin: 0 0.3rem;
     }
 }
