--- a/src/index.css
+++ b/src/index.css
@@ -94,8 +94,30 @@
         display: unset;
     }
 }
+/* Mobile */
+@media screen and (max-width: 930px) and (orientation: landscape) {
+    .App {
+        position: relative;
+        min-height: unset;
+        min-width: unset;
+        max-height: unset;
+        max-width: unset;
+        width: 100%;
+        height: 100%;
+        border-radius: unset;
+        box-shadow: unset;
+        position: relative;
+    }
+    #weekly-calender-container {
+        position: unset;
+    }
+    .title-bar {
+        border-top-left-radius: unset;
+        border-top-right-radius: unset;
+    }
+}
 /* PC */
-@media screen and (max-width: 1920px) and (orientation: landscape) {
+@media screen and (min-width: 931px) and (max-width: 1920px) {
     .App {
         max-width: 1050px;
     }
